# jasmine

./: Cargo.toml  README.md  cliff.toml  output.yaml
.github/workflows/: build.yml
assets/: key.txt
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64_opts.rs  csv_opts.rs  gen_opts.rs  http_opts.rs  mod.rs  opts.rs  text_opts.rs
src/process/: b64.rs  csv_process.rs  gen_process.rs  http_serve.rs  mod.rs  text.rs
src/utils/: mod.rs  utils.rs
zfile/: blake3.txt  ed25519.pk  ed25519.sk
