[package]
name = "rcli"
version = "0.1.0"
authors = ["zhaohu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
anyhow="1.0.84"
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
csv="1.3.0"
serde_json = "1.0.121"
