[package]
name = "rcli"
version = "0.1.0"
authors = ["zhaohu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
anyhow="1.0.84"
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
csv="1.3.0"
serde_json = "1.0.121"
serde_yaml = "0.9.34"
toml = "0.8.18"
zxcvbn = "3.1.0"
base64 = "0.22.1"
blake3 = "1.5.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tracing = "0.1.40"
